# cortex

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  pre-commit.yml  tests.yml
examples/: README.md  live_advance.py  marker.py  record.py  subscribe.py
examples/train/: facial_expression.py  live_advance.py  mental_command.py
src/cortex/: __init__.py  consts.py  cortex.py  cortex_legacy.py  headset.py  logging.py
src/cortex/api/: __init__.py  auth.py  events.py  facial_expression.py  handler.py  headset.py  id.py  markers.py  mental_command.py  profile.py  record.py  response.py  session.py  subject.py  train.py  types.py  utils.py
src/cortex/core/: auth.py  handler.py  headset.py  id.py  markers.py  mental_command.py  record.py  session.py  subject.py  utils.py
src/cortex/deprecated/: __init__.py  cortex.py
tests/: conftest.py
tests/api/: auth_test.py  facial_expression_test.py  handler_test.py  headset_test.py  marker_test.py  mental_command_test.py  profile_test.py  record_test.py  session_test.py  subject_test.py  train_test.py
